Bug 272230 - Bluedevil KCM crashed when editing details of device
Summary: Bluedevil KCM crashed when editing details of device
Status: RESOLVED FIXED
Alias: None
Product: solid
Classification: Unmaintained
Component: bluetooth (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR crash
Target Milestone: ---
Assignee: Alex Fiestas
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-05-02 12:33 UTC by Elias Probst
Modified: 2011-10-07 22:46 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 1.1.3
Sentry Crash Report:


Attachments
New crash information added by DrKonqi (10.32 KB, text/plain)
2011-06-19 20:16 UTC, redmacg
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Elias Probst 2011-05-02 12:33:44 UTC
Application: kcmshell4 ()
KDE Platform Version: 4.6.2 (4.6.2) (Compiled from sources)
Qt Version: 4.7.2
Operating System: Linux 2.6.38-gentoo-r3 x86_64
Distribution: "Gentoo Base System release 2.0.1-r1"

-- Information about the crash:
- What I was doing when the application crashed:
I doubleclicked on a device in the list (Logitech M55b) to edit the details (set trusted = active).
While editing, suddenly the device disappeared from the list in the background.
At the same time, the Bluedevil KCM crashed.

-- Backtrace:
Application: KDE-Kontrollmodul (kcmshell4), signal: Segmentation fault
[KCrash Handler]
#6  BlueDevil::Device::Private::_k_ensureDeviceCreated (this=0x20, busDevicePath=...) at /var/tmp/portage/net-libs/libbluedevil-1.9/work/libbluedevil-1.9/bluedevil/bluedevildevice.cpp:138
#7  0x00007f1bb55fa564 in BlueDevil::Device::setAlias (this=0xc26450, alias=...) at /var/tmp/portage/net-libs/libbluedevil-1.9/work/libbluedevil-1.9/bluedevil/bluedevildevice.cpp:448
#8  0x00007f1bb5116b92 in DeviceDetails::slotButtonClicked (this=0x7fff3e7404c0, button=<value optimized out>) at /var/tmp/portage/net-wireless/bluedevil-1.1-r1/work/bluedevil-1.1/src/kcmodule/devicedetails.cpp:73
#9  0x00007f1bc55304b9 in KDialog::qt_metacall (this=0x7fff3e7404c0, _c=QMetaObject::InvokeMetaMethod, _id=<value optimized out>, _a=0x7fff3e73ed50) at /var/tmp/portage/kde-base/kdelibs-4.6.2-r2/work/kdelibs-4.6.2_build/kdeui/kdialog.moc:190
#10 0x00007f1bb510d8b5 in DeviceDetails::qt_metacall (this=0x20, _c=1047784288, _id=1047784705, _a=0x7fff3e73ed50) at /var/tmp/portage/net-wireless/bluedevil-1.1-r1/work/bluedevil-1.1_build/src/kcmodule/moc_devicedetails.cpp:71
#11 0x00007f1bc4912b31 in QMetaObject::activate (sender=0x7eee20, m=<value optimized out>, local_signal_index=<value optimized out>, argv=0x7fff3e73ed50) at kernel/qobject.cpp:3278
#12 0x00007f1bc49154fe in QSignalMapper::mapped (this=0x20, _t1=4) at .moc/release-shared/moc_qsignalmapper.cpp:101
#13 0x00007f1bc491655a in QSignalMapper::map (this=0x7eee20, sender=0x842660) at kernel/qsignalmapper.cpp:266
#14 0x00007f1bc4916781 in QSignalMapper::qt_metacall (this=0x7eee20, _c=QMetaObject::InvokeMetaMethod, _id=<value optimized out>, _a=0x7fff3e73eee0) at .moc/release-shared/moc_qsignalmapper.cpp:87
#15 0x00007f1bc4912b31 in QMetaObject::activate (sender=0x842660, m=<value optimized out>, local_signal_index=<value optimized out>, argv=0x7fff3e73ed50) at kernel/qobject.cpp:3278
#16 0x00007f1bc4357b50 in QAbstractButton::clicked (this=0x20, _t1=false) at .moc/release-shared/moc_qabstractbutton.cpp:206
#17 0x00007f1bc40a2740 in QAbstractButtonPrivate::emitClicked (this=0xb9bcd0) at widgets/qabstractbutton.cpp:546
#18 0x00007f1bc40a3b2c in QAbstractButtonPrivate::click (this=0xb9bcd0) at widgets/qabstractbutton.cpp:539
#19 0x00007f1bc40a3d26 in QAbstractButton::mouseReleaseEvent (this=0x842660, e=0x7fff3e73f9b0) at widgets/qabstractbutton.cpp:1121
#20 0x00007f1bc3d719bd in QWidget::event (this=0x842660, event=0x7fff3e73f9b0) at kernel/qwidget.cpp:8259
#21 0x00007f1bc3d24b85 in QApplicationPrivate::notify_helper (this=0x624170, receiver=0x842660, e=0x7fff3e73f9b0) at kernel/qapplication.cpp:4462
#22 0x00007f1bc3d29fbb in QApplication::notify (this=0x7fff3e742110, receiver=0x842660, e=0x7fff3e73f9b0) at kernel/qapplication.cpp:4023
#23 0x00007f1bc55de260 in KApplication::notify (this=0x7fff3e742110, receiver=0x842660, event=0x7fff3e73f9b0) at /var/tmp/portage/kde-base/kdelibs-4.6.2-r2/work/kdelibs-4.6.2/kdeui/kernel/kapplication.cpp:311
#24 0x00007f1bc48fceae in QCoreApplication::notifyInternal (this=0x7fff3e742110, receiver=0x842660, event=0x7fff3e73f9b0) at kernel/qcoreapplication.cpp:731
#25 0x00007f1bc3d287d4 in sendEvent (receiver=0x842660, event=0x7fff3e73f9b0, alienWidget=0x842660, nativeWidget=0x7fff3e7404c0, buttonDown=<value optimized out>, lastMouseReceiver=<value optimized out>, spontaneous=true) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:215
#26 QApplicationPrivate::sendMouseEvent (receiver=0x842660, event=0x7fff3e73f9b0, alienWidget=0x842660, nativeWidget=0x7fff3e7404c0, buttonDown=<value optimized out>, lastMouseReceiver=<value optimized out>, spontaneous=true) at kernel/qapplication.cpp:3122
#27 0x00007f1bc3da18ad in QETWidget::translateMouseEvent (this=0x7fff3e7404c0, event=<value optimized out>) at kernel/qapplication_x11.cpp:4461
#28 0x00007f1bc3da06d5 in QApplication::x11ProcessEvent (this=<value optimized out>, event=0x7fff3e740130) at kernel/qapplication_x11.cpp:3587
#29 0x00007f1bc3dc7e79 in x11EventSourceDispatch (s=0x622a70, callback=<value optimized out>, user_data=<value optimized out>) at kernel/qguieventdispatcher_glib.cpp:146
#30 0x00007f1bc066983c in g_main_dispatch (context=0x6211e0) at gmain.c:2440
#31 g_main_context_dispatch (context=0x6211e0) at gmain.c:3013
#32 0x00007f1bc066d511 in g_main_context_iterate (context=0x6211e0, block=<value optimized out>, dispatch=<value optimized out>, self=<value optimized out>) at gmain.c:3091
#33 0x00007f1bc066d6ce in g_main_context_iteration (context=0x6211e0, may_block=1) at gmain.c:3154
#34 0x00007f1bc4924f52 in QEventDispatcherGlib::processEvents (this=0x6044a0, flags=<value optimized out>) at kernel/qeventdispatcher_glib.cpp:422
#35 0x00007f1bc3dc78d2 in QGuiEventDispatcherGlib::processEvents (this=0x20, flags=<value optimized out>) at kernel/qguieventdispatcher_glib.cpp:204
#36 0x00007f1bc48fbee2 in QEventLoop::processEvents (this=<value optimized out>, flags=) at kernel/qeventloop.cpp:149
#37 0x00007f1bc48fc241 in QEventLoop::exec (this=0x7fff3e740450, flags=) at kernel/qeventloop.cpp:201
#38 0x00007f1bc41a1354 in QDialog::exec (this=0x7fff3e7404c0) at dialogs/qdialog.cpp:552
#39 0x00007f1bb5110e85 in KCMBlueDevilDevices::deviceDoubleClicked (this=0x78ae60, index=<value optimized out>) at /var/tmp/portage/net-wireless/bluedevil-1.1-r1/work/bluedevil-1.1/src/kcmodule/bluedevildevices.cpp:443
#40 0x00007f1bb510da10 in KCMBlueDevilDevices::qt_metacall (this=0x78ae60, _c=QMetaObject::InvokeMetaMethod, _id=<value optimized out>, _a=0x7fff3e740660) at /var/tmp/portage/net-wireless/bluedevil-1.1-r1/work/bluedevil-1.1_build/src/kcmodule/moc_bluedevildevices.cpp:92
#41 0x00007f1bc4912b31 in QMetaObject::activate (sender=0xb089e0, m=<value optimized out>, local_signal_index=<value optimized out>, argv=0x7fff3e73ed50) at kernel/qobject.cpp:3278
#42 0x00007f1bc41efbe7 in QAbstractItemView::doubleClicked (this=0x20, _t1=<value optimized out>) at .moc/release-shared/moc_qabstractitemview.cpp:338
#43 0x00007f1bc41f23bf in QAbstractItemView::mouseDoubleClickEvent (this=0xb089e0, event=0x7fff3e741550) at itemviews/qabstractitemview.cpp:1830
#44 0x00007f1bc3d71601 in QWidget::event (this=0xb089e0, event=0x7fff3e741550) at kernel/qwidget.cpp:8263
#45 0x00007f1bc40e4488 in QFrame::event (this=0xb089e0, e=0x7fff3e741550) at widgets/qframe.cpp:557
#46 0x00007f1bc41fed55 in QAbstractItemView::viewportEvent (this=0xb089e0, event=0x7fff3e741550) at itemviews/qabstractitemview.cpp:1628
#47 0x00007f1bc48fc849 in QCoreApplicationPrivate::sendThroughObjectEventFilters (this=<value optimized out>, receiver=0xb036d0, event=0x7fff3e741550) at kernel/qcoreapplication.cpp:846
#48 0x00007f1bc3d24b65 in QApplicationPrivate::notify_helper (this=0x624170, receiver=0xb036d0, e=0x7fff3e741550) at kernel/qapplication.cpp:4458
#49 0x00007f1bc3d29fbb in QApplication::notify (this=0x7fff3e742110, receiver=0xb036d0, e=0x7fff3e741550) at kernel/qapplication.cpp:4023
#50 0x00007f1bc55de260 in KApplication::notify (this=0x7fff3e742110, receiver=0xb036d0, event=0x7fff3e741550) at /var/tmp/portage/kde-base/kdelibs-4.6.2-r2/work/kdelibs-4.6.2/kdeui/kernel/kapplication.cpp:311
#51 0x00007f1bc48fceae in QCoreApplication::notifyInternal (this=0x7fff3e742110, receiver=0xb036d0, event=0x7fff3e741550) at kernel/qcoreapplication.cpp:731
#52 0x00007f1bc3d287d4 in sendEvent (receiver=0xb036d0, event=0x7fff3e741550, alienWidget=0xb036d0, nativeWidget=0x7217b0, buttonDown=<value optimized out>, lastMouseReceiver=<value optimized out>, spontaneous=true) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:215
#53 QApplicationPrivate::sendMouseEvent (receiver=0xb036d0, event=0x7fff3e741550, alienWidget=0xb036d0, nativeWidget=0x7217b0, buttonDown=<value optimized out>, lastMouseReceiver=<value optimized out>, spontaneous=true) at kernel/qapplication.cpp:3122
#54 0x00007f1bc3da18ad in QETWidget::translateMouseEvent (this=0x7217b0, event=<value optimized out>) at kernel/qapplication_x11.cpp:4461
#55 0x00007f1bc3da06d5 in QApplication::x11ProcessEvent (this=<value optimized out>, event=0x7fff3e741cd0) at kernel/qapplication_x11.cpp:3587
#56 0x00007f1bc3dc7e79 in x11EventSourceDispatch (s=0x622a70, callback=<value optimized out>, user_data=<value optimized out>) at kernel/qguieventdispatcher_glib.cpp:146
#57 0x00007f1bc066983c in g_main_dispatch (context=0x6211e0) at gmain.c:2440
#58 g_main_context_dispatch (context=0x6211e0) at gmain.c:3013
#59 0x00007f1bc066d511 in g_main_context_iterate (context=0x6211e0, block=<value optimized out>, dispatch=<value optimized out>, self=<value optimized out>) at gmain.c:3091
#60 0x00007f1bc066d6ce in g_main_context_iteration (context=0x6211e0, may_block=1) at gmain.c:3154
#61 0x00007f1bc4924f52 in QEventDispatcherGlib::processEvents (this=0x6044a0, flags=<value optimized out>) at kernel/qeventdispatcher_glib.cpp:422
#62 0x00007f1bc3dc78d2 in QGuiEventDispatcherGlib::processEvents (this=0x20, flags=<value optimized out>) at kernel/qguieventdispatcher_glib.cpp:204
#63 0x00007f1bc48fbee2 in QEventLoop::processEvents (this=<value optimized out>, flags=) at kernel/qeventloop.cpp:149
#64 0x00007f1bc48fc241 in QEventLoop::exec (this=0x7fff3e741ff0, flags=) at kernel/qeventloop.cpp:201
#65 0x00007f1bc41a1354 in QDialog::exec (this=0x71a9b0) at dialogs/qdialog.cpp:552
#66 0x00007f1bc5fa0c38 in kdemain (_argc=<value optimized out>, _argv=<value optimized out>) at /var/tmp/portage/kde-base/kcmshell-4.6.2/work/kcmshell-4.6.2/kcmshell/main.cpp:287
#67 0x00007f1bc5c5dbbd in __libc_start_main (main=<value optimized out>, argc=<value optimized out>, ubp_av=<value optimized out>, init=<value optimized out>, fini=<value optimized out>, rtld_fini=<value optimized out>, stack_end=0x7fff3e742898) at libc-start.c:226
#68 0x00000000004006e9 in _start ()

Reported using DrKonqi
Comment 1 redmacg 2011-06-19 20:16:44 UTC
Created attachment 61156 [details]
New crash information added by DrKonqi

kcmshell4 () on KDE Platform 4.6.2 (4.6.2) using Qt 4.7.2

Got Logitech M555b mouse.  It had been paired and trusted for ages. Now it has been shown as paired only. Tried to mark it as trusted -- imideatly got error, now reporting it. If you wonder why I use BT mouse, it's because I've got laptop and do not want to occupy USB ports. Also my BT keyboard also stopped working

-- Backtrace (Reduced):
#6  0x00007f5435e185a7 in BlueDevil::Device::Private::_k_ensureDeviceCreated(QString const&) () from /usr/lib/libbluedevil.so.1
#7  0x00007f5435e1ae77 in BlueDevil::Device::setAlias(QString const&) () from /usr/lib/libbluedevil.so.1
[...]
#9  0x00007f5445c8cdb2 in KDialog::qt_metacall (this=0x7fffb0287e50, _c=QMetaObject::InvokeMetaMethod, _id=33, _a=0x7fffb0286710) at ./kdialog.moc:190
[...]
#12 0x00007f544508f38e in QSignalMapper::mapped (this=<value optimized out>, _t1=4) at .moc/release-shared/moc_qsignalmapper.cpp:101
#13 0x00007f544508f496 in QSignalMapper::map (this=0xd50470, sender=0xc07810) at kernel/qsignalmapper.cpp:266
Comment 2 Alex Fiestas 2011-10-07 22:46:11 UTC
Git commit 9c4dee7de9447e23ac8e11c293597f7321b6585a by Alex Fiestas.
Committed on 08/10/2011 at 00:43.
Pushed by afiestas into branch '1.1'.

Close editDetails dialog when any device is changed

This is not perfect since we are closing the dialgo when anything
happens, but this is better than a crash. Will improve this in future
releases.

BUG: 272230
FIXED-IN: 1.1.3

M  +13   -4    src/kcmodule/bluedevildevices.cpp
M  +2    -0    src/kcmodule/bluedevildevices.h

http://commits.kde.org/bluedevil/9c4dee7de9447e23ac8e11c293597f7321b6585a