Close editDetails dialog when any device is changed

This is not perfect since we are closing the dialgo when anything
happens, but this is better than a crash. Will improve this in future
releases.

BUG: 272230
FIXED-IN: 1.1.3